--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>安全管理中心</title>
+	<link rel="shortcut icon" href="Public/favicon.ico" />
 </head>
 
 <body>
