--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>安全管理中心</title>
-	<link rel="shortcut icon" href="Public/favicon.ico" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>安全管理中心</title>
+  <link rel="shortcut icon" href="http://49.234.183.210:8080/favicon.ico" />
 </head>
 
 <body>
-	<div id="app"></div>
+  <div id="app"></div>
 </body>
 
 </html>
